--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -7,10 +7,10 @@ CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01=y
 CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-ss-01="ipq-wifi-jdcloud_re-ss-01"
 CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02=y
 CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-02="ipq-wifi-jdcloud_re-cs-02 kmod-ath11k-pci ath11k-firmware-qcn9074 luci-app-athena-led luci-i18n-athena-led-zh-cn"
-CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="-ath11k-firmware-ipq6018 -kmod-ath11k -kmod-ath11k-ahb -kmod-ath11k-pci luci-app-dockerman"
-CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud=y
-CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud="ipq-wifi-redmi_ax5-jdcloud"
+#CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07=y
+#CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_jdcloud_re-cs-07="-ath11k-firmware-ipq6018 -kmod-ath11k -kmod-ath11k-ahb -kmod-ath11k-pci luci-app-dockerman"
+#CONFIG_TARGET_DEVICE_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud=y
+#CONFIG_TARGET_DEVICE_PACKAGES_qualcommax_ipq60xx_DEVICE_redmi_ax5-jdcloud="ipq-wifi-redmi_ax5-jdcloud"
 CONFIG_TARGET_ROOTFS_INITRAMFS=n
 
 # Compile
@@ -25,7 +25,7 @@ CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_TELNET=y
 
 # Swap
-CONFIG_PACKAGE_zram-swap=y
+#CONFIG_PACKAGE_zram-swap=y
 
 # NSS
 CONFIG_IPQ_MEM_PROFILE_256=y
@@ -47,7 +47,7 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-proto-relay=y
 
 # Kernel modules
-CONFIG_PACKAGE_kmod-fs-exfat=y
+#CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
@@ -56,11 +56,11 @@ CONFIG_PACKAGE_kmod-tun=y
 #  USB Support
 CONFIG_PACKAGE_kmod-usb-acm=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
-CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
-CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
-CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
+#CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
+#CONFIG_PACKAGE_kmod-usb-net-rndis=y
+#CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=y
+#CONFIG_PACKAGE_kmod-usb-net-rtl8152=y
+#CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
 CONFIG_PACKAGE_kmod-usb-storage=y
@@ -98,15 +98,15 @@ CONFIG_PACKAGE_sgdisk=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_qrencode=y
-CONFIG_PACKAGE_smartmontools-drivedb=y
+#CONFIG_PACKAGE_smartmontools-drivedb=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 #  Coremark
-CONFIG_PACKAGE_coremark=y
-CONFIG_COREMARK_OPTIMIZE_O3=y
-CONFIG_COREMARK_ENABLE_MULTITHREADING=y
-CONFIG_COREMARK_NUMBER_OF_THREADS=6
+#CONFIG_PACKAGE_coremark=y
+#CONFIG_COREMARK_OPTIMIZE_O3=y
+#CONFIG_COREMARK_ENABLE_MULTITHREADING=y
+#CONFIG_COREMARK_NUMBER_OF_THREADS=6
 #  docker dependencies
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_ip6tables-nft=y
@@ -115,38 +115,40 @@ CONFIG_PACKAGE_iptables-mod-fullconenat=y
 CONFIG_PACKAGE_libip4tc=y
 CONFIG_PACKAGE_libip6tc=y
 #  mwan3 dependencies
-CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
+#CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 
 # Enable Luci App
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-dockerman=m
 CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-lucky=y
-CONFIG_PACKAGE_luci-app-mosdns=y
+#CONFIG_PACKAGE_luci-app-lucky=y
+#CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-sqm=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-sqm=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-zerotier=y
+#CONFIG_PACKAGE_luci-app-wol=y
+#CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 
 # Proxy
 #  HomeProxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
 #  Passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
+#CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
