--- a/deconfig/aliyun_ap8220_immwrt.config
+++ b/deconfig/aliyun_ap8220_immwrt.config
@@ -23,7 +23,7 @@ CONFIG_IPQ_MEM_PROFILE_256=y
 CONFIG_ATH11K_MEM_PROFILE_512M=y
 CONFIG_NSS_MEM_PROFILE_HIGH=y
 CONFIG_NSS_FIRMWARE_VERSION_12_2=y
-CONFIG_PACKAGE_sqm-scripts-nss=y
+#CONFIG_PACKAGE_sqm-scripts-nss=y
 CONFIG_PACKAGE_kmod-qca-mcs=y
 CONFIG_KERNEL_SKB_RECYCLER=y
 CONFIG_NSS_DRV_WIFI_MESH_ENABLE=n
@@ -36,7 +36,7 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-proto-relay=y
 
 # Kernel modules
-CONFIG_PACKAGE_kmod-fs-exfat=y
+#CONFIG_PACKAGE_kmod-fs-exfat=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-nft-queue=y
@@ -61,38 +61,40 @@ CONFIG_PACKAGE_sgdisk=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_qrencode=y
-CONFIG_PACKAGE_smartmontools-drivedb=y
+#CONFIG_PACKAGE_smartmontools-drivedb=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 #  Coremark
-CONFIG_PACKAGE_coremark=y
-CONFIG_COREMARK_OPTIMIZE_O3=y
-CONFIG_COREMARK_ENABLE_MULTITHREADING=y
-CONFIG_COREMARK_NUMBER_OF_THREADS=6
+#CONFIG_PACKAGE_coremark=y
+#CONFIG_COREMARK_OPTIMIZE_O3=y
+#CONFIG_COREMARK_ENABLE_MULTITHREADING=y
+#CONFIG_COREMARK_NUMBER_OF_THREADS=6
 
 # Enable Luci App
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-istorex=y
+#CONFIG_PACKAGE_luci-app-istorex=y
 CONFIG_PACKAGE_luci-app-lucky=y
-CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-smartdns=y
+#CONFIG_PACKAGE_luci-app-mosdns=y
+#CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=y
 
-# Proxy
+#  HomeProxy
+CONFIG_PACKAGE_luci-app-homeproxy=y
+
 #  Passwall
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
+#CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_SingBox=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=n
+#CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
