--- a/deconfig/aliyun_ap8220_immwrt.config
+++ b/deconfig/aliyun_ap8220_immwrt.config
@@ -72,8 +72,8 @@ CONFIG_PACKAGE_default-settings-chn=y
 #CONFIG_COREMARK_NUMBER_OF_THREADS=6
 
 # Enable Luci App
-#CONFIG_PACKAGE_luci-app-adguardhome=y
-#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
 #CONFIG_PACKAGE_luci-app-istorex=y
@@ -84,6 +84,8 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 CONFIG_PACKAGE_luci-app-wol=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-app-hd-idle=y
 
 #  HomeProxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
