--- a/deconfig/aliyun_ap8220_immwrt.config
+++ b/deconfig/aliyun_ap8220_immwrt.config
@@ -72,12 +72,12 @@ CONFIG_PACKAGE_default-settings-chn=y
 #CONFIG_COREMARK_NUMBER_OF_THREADS=6
 
 # Enable Luci App
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
+#CONFIG_PACKAGE_luci-app-adguardhome=y
+#CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
 #CONFIG_PACKAGE_luci-app-istorex=y
-CONFIG_PACKAGE_luci-app-lucky=y
+#CONFIG_PACKAGE_luci-app-lucky=y
 #CONFIG_PACKAGE_luci-app-mosdns=y
 #CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -90,6 +90,7 @@ CONFIG_PACKAGE_luci-theme-argon=n
 
 #  HomeProxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
+CONFIG_PACKAGE_luci-app-mihomo=y
 
 #  Passwall
 #CONFIG_PACKAGE_luci-app-passwall=y
