--- a/deconfig/aliyun_ap8220_immwrt.config
+++ b/deconfig/aliyun_ap8220_immwrt.config
@@ -91,6 +91,7 @@ CONFIG_PACKAGE_luci-theme-argon=n
 #  HomeProxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
 CONFIG_PACKAGE_luci-app-mihomo=y
+CONFIG_PACKAGE_luci-app-tailscale=y
 
 #  Passwall
 #CONFIG_PACKAGE_luci-app-passwall=y
