--- a/deconfig/aliyun_ap8220_immwrt.config
+++ b/deconfig/aliyun_ap8220_immwrt.config
@@ -87,6 +87,8 @@ CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_luci-theme-argon=n
 
 #  HomeProxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
