--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -140,7 +140,7 @@ CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=n
-CONFIG_PACKAGE_block-mount=y
+####################CONFIG_PACKAGE_block-mount=y
 # Proxy
 #  HomeProxy
 CONFIG_PACKAGE_luci-app-homeproxy=y
