--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -137,7 +137,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 #CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
-#CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_luci-theme-argon=n
 
