--- a/compilecfg/aliyun_ap8220_immwrt.ini
+++ b/compilecfg/aliyun_ap8220_immwrt.ini
@@ -1,7 +1,7 @@
-#REPO_URL=https://github.com/VIKINGYFY/immortalwrt.git
-#REPO_BRANCH=main
-#BUILD_DIR=imm-nss
+REPO_URL=https://github.com/VIKINGYFY/immortalwrt.git
+REPO_BRANCH=main
+BUILD_DIR=imm-nss
 ##临时改为6.12内核编译测试
-REPO_URL=https://github.com/LiBwrt/openwrt-6.x.git
-REPO_BRANCH=kernel-6.12
-BUILD_DIR=libwrt-k612
+#REPO_URL=https://github.com/LiBwrt/openwrt-6.x.git
+#REPO_BRANCH=kernel-6.12
+#BUILD_DIR=libwrt-k612
