--- a/deconfig/jdcloud_ipq60xx_libwrt.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt.config
@@ -67,18 +67,18 @@ CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb2=y
 #  docker kernel dependencies
-#CONFIG_PACKAGE_kmod-br-netfilter=y
-#CONFIG_PACKAGE_kmod-ip6tables=y
-#CONFIG_PACKAGE_kmod-ipt-conntrack=y
-#CONFIG_PACKAGE_kmod-ipt-extra=y
-#CONFIG_PACKAGE_kmod-ipt-nat=y
-#CONFIG_PACKAGE_kmod-ipt-nat6=y
-#CONFIG_PACKAGE_kmod-ipt-physdev=y
-#CONFIG_PACKAGE_kmod-nf-ipt6=y
-#CONFIG_PACKAGE_kmod-nf-ipvs=y
-#CONFIG_PACKAGE_kmod-nf-nat6=y
-#CONFIG_PACKAGE_kmod-dummy=y
-#CONFIG_PACKAGE_kmod-veth=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-ip6tables=y
+CONFIG_PACKAGE_kmod-ipt-conntrack=y
+CONFIG_PACKAGE_kmod-ipt-extra=y
+CONFIG_PACKAGE_kmod-ipt-nat=y
+CONFIG_PACKAGE_kmod-ipt-nat6=y
+CONFIG_PACKAGE_kmod-ipt-physdev=y
+CONFIG_PACKAGE_kmod-nf-ipt6=y
+CONFIG_PACKAGE_kmod-nf-ipvs=y
+CONFIG_PACKAGE_kmod-nf-nat6=y
+CONFIG_PACKAGE_kmod-dummy=y
+CONFIG_PACKAGE_kmod-veth=y
 #  NSS kernel drive
 CONFIG_PACKAGE_kmod-qca-nss-drv-igs=y
 CONFIG_PACKAGE_kmod-qca-nss-drv-l2tpv2=y
@@ -109,12 +109,12 @@ CONFIG_PACKAGE_default-settings-chn=y
 #CONFIG_COREMARK_ENABLE_MULTITHREADING=y
 #CONFIG_COREMARK_NUMBER_OF_THREADS=6
 #  docker dependencies
-#CONFIG_PACKAGE_iptables-mod-extra=y
-#CONFIG_PACKAGE_ip6tables-nft=y
-#CONFIG_PACKAGE_ip6tables-mod-fullconenat=y
-#CONFIG_PACKAGE_iptables-mod-fullconenat=y
-#CONFIG_PACKAGE_libip4tc=y
-#CONFIG_PACKAGE_libip6tc=y
+CONFIG_PACKAGE_iptables-mod-extra=y
+CONFIG_PACKAGE_ip6tables-nft=y
+CONFIG_PACKAGE_ip6tables-mod-fullconenat=y
+CONFIG_PACKAGE_iptables-mod-fullconenat=y
+CONFIG_PACKAGE_libip4tc=y
+CONFIG_PACKAGE_libip6tc=y
 #  mwan3 dependencies
 #CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 
@@ -123,9 +123,9 @@ CONFIG_PACKAGE_default-settings-chn=y
 #CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary=n
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
-#CONFIG_PACKAGE_luci-app-dockerman=m
+CONFIG_PACKAGE_luci-app-dockerman=m
 #CONFIG_PACKAGE_luci-app-istorex=y
-#CONFIG_PACKAGE_luci-app-lucky=y
+CONFIG_PACKAGE_luci-app-lucky=y
 #CONFIG_PACKAGE_luci-app-mosdns=y
 CONFIG_PACKAGE_luci-app-samba4=y
 #CONFIG_PACKAGE_luci-app-smartdns=y
